# tryrack

./: .gitignore  WARDROBE_IMPLEMENTATION.md
backend/: .env.example  README.md  alembic.ini  api.py  auth.py  crud.py  database.py  env.example  main.py  models.py  pyproject.toml  schemas.py  test_api.py  test_database.py  tryrack.db
backend/alembic/: env.py
backend/alembic/versions/: 1271f37b8fb9_add_wardrobe_items_table_fixed.py  1b2b687ec81e_add_full_body_image_url_to_users.py  1d131bb7ebe2_replace_clothing_size_fields_with_json.py  5e3c09959dff_add_oauth_support_to_user_model.py  820c43211db3_add_virtual_tryon_results_table.py  8eb1f63b0805_add_ai_processing_fields.py  9f2b1c0f1add_add_index_oauth_provider_id.py  a1b2c3d4e5f6_add_refresh_tokens_table.py  add_profile_completion_fields.py  add_wear_tracking_to_wardrobe_items.py  c9baaa39c4cd_add_user_type_to_users.py  ec4b5a374fc1_add_items_json_to_virtual_tryon.py  f01924ff7dcc_initial_migration.py  f13853e87bc9_update_for_postgresql_constraints.py  fcbfc07698fe_initial_migration_create_users_items_.py
backend/app/api/: __init__.py  auth.py  oauth.py  style_insights.py  users.py  virtual_tryon.py  wardrobe.py
backend/app/core/: app.py  auth.py  config.py  workos.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  gemini_service.py  outfit_service.py  s3_service.py  style_insights_service.py
backend/app/tasks/: cleanup.py
backend/app/utils/: __init__.py
backend/docs/: GEMINI_INTEGRATION.md
docs/: authentication.md  aws_setup.md  blueprint.md  instruct.md  onboarding.md
frontend/: AUTHENTICATION.md  README.md  app.json  package-lock.json  package.json
(+74 files in other folders)
